<resources>
    <string name="app_name">STELA</string>
    <string name="email">Alamat Email<font color='#FF0000'>*</font></string>
    <string name="nama_lengkap">Nama Lengkap<font color='#FF0000'>*</font></string>
    <string name="nip">Nomor Induk Pegawai<font color='#FF0000'>*</font></string>
    <string name="no_hp">Nomor HP<font color='#FF0000'>*</font></string>

    <string name="gedung">Gedung<font color='#FF0000'>*</font></string>
    <string name="lantai">Lantai<font color='#FF0000'>*</font></string>
    <string name="ruangan">Ruangan<font color='#FF0000'>*</font></string>
    <string name="judul">Judul<font color='#FF0000'>*</font></string>
    <string name="keterangan">Keterangan<font color='#FF0000'>*</font></string>
    <string name="bagian">Bagian<font color='#FF0000'>*</font></string>
    <string name="stela">Stela merupakan sistem eskalasi layanan Sekretariat Jenderal DPR RI yang dibuat oleh Pusat Teknologi Informasi untuk membantu mengatasi permasalahan terkait teknologi informasi yang ada pada lingkungan Sekretariat Jenderal DPR RI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
