<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <RelativeLayout
        android:id="@+id/header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:background="#5F9DF7"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:src="@drawable/ic_back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="Form Permintaan"
            android:text="Form"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/main_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_section"
        android:fillViewport="true"
        android:scrollbars="none">

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Buat tiket baru"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Nama"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/tv_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Jabatan
"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/tv_unitkerja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Unit Kerja"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/NIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/tv_gedung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/gedung"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/headerJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lantai"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/headerDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/ruangan"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/tv_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Silahkan lengkapi permintaan anda"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/judul"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/ed_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="Untuk permintaan sistem informasi, diwajibkan untuk upload dokumen Kerangka Acuan Kerja (KAK) dan Nota Dinas (NoDin)"
                android:textColor="#000000" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@null"
                android:src="@drawable/btn_upload" />

            <TextView
                android:id="@+id/tv_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/keterangan"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/keterangan"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_border_gray"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:paddingTop="1dp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#2954A8"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:text="Buat Tiket"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="25dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>